add function: restart automatic